app/assets/stylesheets/2019/welcome.css.scss
body#acc2019 { 
  
  .navbar-brand {
    padding-left: 44px;
    padding-top: 17px;
    padding-bottom: 11px;
    background-image: url(image-path('camp.png'));
    background-repeat: no-repeat;
    background-position: -5% 100%;
    background-size: 27%;
    margin-right: 0px;
    font-size: 18px;
  }
  
  .navbar-dark .navbar-nav {
    a.nav-link:link, 
    a.nav-link:hover, 
    a.nav-link:active, 
    a.nav-link:visited  { 
      color: black;
    }
  }
  
  .navbar-dark .navbar-nav .show > .nav-link, 
  .navbar-dark .navbar-nav .show > .nav-link:hover,
  .navbar-dark .navbar-nav .show > .nav-link:active,
  .navbar-dark .navbar-nav .show > .nav-link:visited,
  .navbar-dark .navbar-nav .show > .nav-link:focus { 
    color: black !important;
  }
  
  #landing-img {
    width: 100%;
    height: 500px;
    background-image: url(image-path('landing_2019_dark.jpg'));
    background-size:  cover;
    background-repeat: no-repeat;
    background-position:  0% -25%;
    padding: 100px 10px;
    text-align: center;
    
    a#subscribe-now {
      font-size: 25px;
      font-weight: bold;
      margin-top: 10px;
    }
    
    h1 { 
      color: #FFF;
      font-size: 34px;
    } 
  }
  
  .header-effect {
    background-image: url(image-path("bg-header-bottom.png"));
    height: 43px;
  }
  
  #empty-background {
    height: 40px;
  }
  
  #proposal {
    text-align: center;
    padding: 40px 40px 0px 40px;
  }
  
  #promisses {
    text-align: center;
    li {
      list-style: none;
      float: left;
      
      div {
        background-color: #EFEEEA;
        margin: 40px auto;
        padding: 20px;
      }
      
      img {
        margin: 20px auto;
        display: block;
        width: 70px;
        height: 70px;
      }
    }
  } 
  
  .alternated {
    background-color: #EFEEEA;
  } 
  
  .image-div {
    margin: auto;
    padding: 0px 28px;
    top: -35px;
    h3 {
      text-align: center;
      color: white;
      top: -53px;
      position: relative;
      margin: 0px 15px;
      background-color: black;
      font-weight: bolder;
      padding: 10px 0px;
    }
  }
  
  #unconf {
    padding-bottom: 40px;
  }
  
  .center {
    text-align: center;
  }
  
  #pomisses-div {
    margin-top: 40px;
  }
  
  #testmonials {
    h2 {
      text-align: center;
    }
  }
  
  ul#testmonials-list {
    list-style: none;
    padding: 0px;
    li:hover {
      background: white;
      img {
        border: 5px solid #6A974D;
      }
    }
    li {
      float: left;
      margin: 0px auto;
      padding: 20px;
      text-align: center;
      blockquote {
        padding-top: 20px;
        font-style: italic;
      }
      img {
        border-radius: 200px;
        border: 5px solid white;
        width: 200px;
      }
      h4 {
        color: black;
        font-weight: bolder;
      }
      p {
        font-weight: bold;
        color: #E9C44D;
        font-size: 14px;
      }
    }
  }
  
  #pricing {
    h2 {
      text-align: center;
      padding-bottom: 40px;
    }
    h3 {
      text-align: center;
    }
    
    ul#rooms {
      padding: 0px;
      list-style: none;
      text-align: center;
      li:last-child {
        padding-bottom: 0px;
      }
      li {
        float: left;
        padding-bottom: 60px;
        padding-left: 0px;
        padding-right: 0px;
        p {
          margin-bottom:0px;
          height: 48px;
        }
        img {
          width: 100%;
        }
        
        .details-icon {
          width: 50px;
          height: 50px;
          margin-left: auto;
          margin-right: auto;
          margin-top: -25px;
          display: block;
        }
        
        .price {
          color: #6A974D;
          font-weight: bolder;
          font-size: 20px;
        }
        
        .wrap:hover .overlay{
          opacity: 1;
        }
        div.wrap {
          position: relative;
          width: 100%;
        }
        
        p {
          text-align: center;
        }
        h4 {
          color: black;
          text-align: center;
          font-weight: bolder;
        }
      }
    }
  }
  
  .white-box {
    background-color: white;
    padding: 40px;
    margin-bottom: 40px;
  }
  
  #room-options {
    #room_title {
      background-color: #6A974D;
      h1 { 
        color: white;
        font-weight: bolder;
        padding: 100px;
        text-align: center;
      }
    }
  }
  
  #participants {
    h2 {
      text-align: center;
      padding: 50px;
    }
    ul {
      list-style: none;
      padding-left: 0px;
      li {
        padding-bottom: 35px;
        img {
          border-radius: 150px;
          margin: auto;
          width: 225px;
          display: block;
        }
      }
      a {
        display: block;
        text-align: center;
        color: #E9C44D;
        font-weight: bolder;
        font-size: 18px;
        margin-top: 15px;
      }
      
      span {
        display: block;
        text-align: center;
        color: black;
        font-weight: bolder;
        font-size: 18px;
        margin-top: 15px;
      }
    }
  }
  
  #program {
    padding-bottom: 50px;
    h2 {
      text-align: center;
      padding-bottom: 50px;
    }
    
    ul {
      list-style: none;
      vertical-align: top;
      padding-left: 0px;
      li {
        float: left;
        margin: 0px auto;
        background-color: white;
        padding-bottom: 10px;
        margin-bottom: 20px;
        h3 {
          text-align: center;
          padding-top: 20px;
        }
        
        .program-detailed {
          list-style: none;
          
            line-height: 2em;
        
        }
      }
    }
  }
  
  #resort {

    background-image: url(image-path("cheiro-de-mato.jpg"));
    min-height: 600px;
    
    .white-box {
      text-align: center;
      margin-top: 50px;
    }
    img { 
      width: 100%;
      margin-bottom: 20px;
    }
    p {
      text-align: left;
    }
  }
  
  #footer {
    padding-top: 40px;
    
    h3 {
      font-size: 18px;
      font-weight: bolder;
    }
    
    ul {
      list-style: none;
      padding-left: 0px;
      
      img {
        width: 200px;
        margin: auto;
      }
    }
    
    ul#footer-section > li { 
      margin-bottom: 35px;
    }
  }
  
  #final-footer {
    text-align: center;
    padding-bottom: 40px;
  }
  
  .row {
    margin-right: 0px;
    margin-left: 0px;
  }
  
  .division {
    background-image: url(image-path('bg-footer.png'));
    height: 93px;
  }
 
  .submission {
    padding-top: 100px;
  }
  
  .right {
    text-align: right;
  }

  .submit-pp {
    font-size: 20px;
    font-weight: bolder;
    margin-top: -100px;
  }
  
  #criterias {
    h3 {
      display: block;
      text-align: center;
      padding: 40px;
    }
    ul {
      list-style: none;
      padding-left: 0px;
      li {
        text-align: center;
        float: left;
        padding: 50px 15px;
        background: white;
        margin-top: 25px;
        margin-bottom: 25px;
        height: 380px;
        img {
          margin: auto;
          display: block;
          width: 100px;
          margin-bottom: 20px;
        }
      }
    }
  }
  
  #stages {
    h3 {
      text-align: center;
      padding: 40px;
    }
    ul {
      text-align: center;
      list-style: none;
      padding-left: 0px;
      li {
        display: block;
        width: 130px;
        margin: auto;
        span {
          font-size: 50px;
          display: block;
          text-align: center;
        }
      }
    }
  }
  
  #submit-now {
    background-image: url(image-path("resort-1.jpg"));
    height: 500px;
    text-align: center;
    a {
      font-size: 30px;
      margin: 400px 0px;
    }
  }

  #process {
    h3 { 
      text-align: center;
    }
    min-height: 590px;
    ul {
     list-style: none; 
     padding-left: 0px;
     li {
       text-align: center;
       float: left;
       padding: 50px 15px;
       background: white;
       margin: 15px auto;
       height: 420px;
       img {
         margin: auto;
         display: block;
         width: 100px;
         margin-bottom: 20px;
       }
     }
     .offset {
       background: none;
       background-image: url(image-path("next.png"));
       background-repeat: no-repeat;
       background-position:center; 
       background-size: 60px 60px;
     }
     
    }
  }
  
  .submission {
    img {
      width: 100%;
    }
  }
  
  #view-position-paper {
    img {
      border-radius: 150px;
      margin: 0px 30px;
      width: 225px;
      height: 225px;
      display: block;
      float: right;
    }
  }

  .position-paper-form {
    textarea {
      height: 300px;
    }
  }

  .alert-success { 
    margin-top: 10px;
    button {
      margin-top: 0px;
    }
    p {
      margin-bottom: 0px;
    }
  }
}



@media only screen and (min-width: 980px) {
  body#acc2019 {
    
    .navbar-brand {
      padding-left: 50px;
      padding-top: 20px;
      padding-bottom: 15px;
      background-position: -10% 100%;
      background-size: 30%;
    }
    
    .navbar-expand-lg .navbar-collapse {
      padding-top: 5px;
    }
    
    #landing-img h1 {  
      text-align: center;
      font-size: 70px;
    }
   
    #landing-img {
      padding: 130px 50px;
    }
    
    button {
      margin-top: 20px;
    }
  
    .image-div {
      padding: 40px 40px 0px 40px;
      top: 0px;
    }
    
    #promisses {
      li div {
        margin: 40px;
      }
    }
    
    #pricing {
      ul li {
        padding-bottom: 0px !important;
        margin: auto;
      }
      .white-box {
        margin: 0px 40px 40px 40px;
      }
    }
    
    ul#testmonials-list li {
      margin: 20px auto;
    }
  
    #footer {
      padding: 130px 60px 30px 60px;
    }
  
    #criterias {
      li {
        margin: 0px 25px;
      }
    }
    
    #stages {
      height: 370px;
      ul {
        li {
          margin: 0px 20px !important;
          float: left;
        }
      }
    }
    
    #process {
      ul {
        li {
          margin: 25px 5px;
        }
      }
    }
    
    #resort {
      img { 
        width: 50%;
      }
    }
    
    #view-position-paper {
      br {
        display:none;
      }
    }
  }
}

